kfreebsd-9 (9.0~svn223502-2) UNRELEASED; urgency=low

  * Add conf/kmod_syms.awk to header package.

 -- Robert Millan <rmh@debian.org>  Sat, 25 Jun 2011 20:46:01 +0200

kfreebsd-9 (9.0~svn223502-1) experimental; urgency=low

  * New upstream snapshot.
    - Fix net802.11 stack kernel memory disclosure (CVE-2011-2480).
      (Closes: #631160)
    - Refresh all patches.
    - Revert enabling of kgssapi modules (break build).

  [ Petr Salinger ]
  * Drop 111_linprocfs_kthread.diff, fixed upstream.

  [ Robert Millan ]
  * Add conf/kern.mk, conf/kmod.mk, kern/vnode_if.src, and
    tools/vnode_if.awk to kfreebsd-headers-8.2-1.  (Closes: #630509)
  * Add myself to Uploaders.

 -- Robert Millan <rmh@debian.org>  Fri, 24 Jun 2011 16:16:30 +0200

kfreebsd-9 (9.0~svn223109-0.1) experimental; urgency=low

  * Non-maintainer upload.

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.

  [ Robert Millan ]
  * Add lintian override for "embedded-library" (zlib.ko).
  * Automatically propagate GCC version dependency to debian/control.
  * Add "(meta-package)" to Description of meta-packages to make lintian happy.
  * Build by GCC 4.6.

  [ Petr Salinger ]
  * Add 111_linprocfs_kthread.diff. Closes: #630104.

 -- Robert Millan <rmh@debian.org>  Thu, 16 Jun 2011 10:28:34 +0200

kfreebsd-8 (8.2-1) unstable; urgency=low

  [ Robert Millan ]
  * New upstream release.
    - 000_adaptive_machine_arch.diff: Remove (merged).
    - 000_ata.diff: Remove (merged).
    - 000_ufs_lookup.diff: Remove (merged).
    - 004_xargs.diff: Resync.
    - 102_POLL_HUP.diff: Remove (merged).
    - 104_linprocfs.diff: Remove (merged).
    - 904_dev_full.diff: Resync.
    - 999_firmware.diff: Resync.
  * Make this package buildable on GNU/Linux. Closes: #602770.
  * MIPS port (with malta flavor).
