@@ -1,8 +1,10 @@
 kfreebsd-9 (9.0~svn223502-2) UNRELEASED; urgency=low
 
-  * Add conf/kmod_syms.awk to header package.
+  * Add sys/conf/kmod_syms.awk, sys/kern/bus_if.m, sys/dev/pci/pci_if.m,
+    sys/kern/device_if.m, sys/tools/makeobjops.awk and sys/machine
+    symlink to header package.
 
- -- Robert Millan <rmh@debian.org>  Sat, 25 Jun 2011 20:46:01 +0200
+ -- Robert Millan <rmh@debian.org>  Tue, 28 Jun 2011 17:30:31 +0200
 
 kfreebsd-9 (9.0~svn223502-1) experimental; urgency=low
 
